[gd_scene load_steps=9 format=3 uid="uid://bqu6hyreckurp"]

[ext_resource type="Texture2D" uid="uid://bu3c1fnsmx7vo" path="res://assets/machines/water_cooler.png" id="1_07wtl"]
[ext_resource type="Script" path="res://scenes/machines/water_cooler_machine.gd" id="1_epf42"]
[ext_resource type="Shader" path="res://scenes/machines/water_cooler_machine_selection.gdshader" id="1_f6k86"]
[ext_resource type="Script" path="res://scenes/machines/interactable_component.gd" id="2_cnybt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vits5"]
shader = ExtResource("1_f6k86")
shader_parameter/is_enabled = false

[sub_resource type="AtlasTexture" id="AtlasTexture_jf7uw"]
atlas = ExtResource("1_07wtl")
region = Rect2(4, 0, 16, 35)

[sub_resource type="CircleShape2D" id="CircleShape2D_uqtcg"]
radius = 6.08276

[sub_resource type="CircleShape2D" id="CircleShape2D_suavo"]
radius = 20.0

[node name="WaterCoolerMachine" type="StaticBody2D"]
collision_mask = 3
script = ExtResource("1_epf42")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_vits5")
position = Vector2(0, -16)
texture = SubResource("AtlasTexture_jf7uw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_uqtcg")

[node name="InteractableComponent" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
script = ExtResource("2_cnybt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableComponent"]
shape = SubResource("CircleShape2D_suavo")
debug_color = Color(0.728368, 0.472084, 0.124573, 0.42)

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.0
offset_top = -44.0
offset_right = 8.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 8
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="interactable_activated" from="InteractableComponent" to="." method="_on_interactable_activated"]
[connection signal="interactable_deactivated" from="InteractableComponent" to="." method="_on_interactable_deactivated"]
